--- a/links.html
+++ b/links.html
@@ -5,4 +5,4 @@
 <a href="foodstuff.html"target="c"title="food">foodstuff</a><br><br>
 <a href="clothing bay.html"target="c"title="clothing bay">clothing bay</a><br><br>
 <a href="cereals.html"target="c"title="cereals">cereals</a><br><br>
-<a href="mailto:kariukiandNDUNGÜ@market2010.or.ke">contact us</a>
+<a href="mailto:njonjogirls@yahoo.com">contact us</a>
